...
        titleLabel.font = .systemFont(ofSize: 20, weight: .bold)
        titleLabel.textColor = .black
        return titleLabel
    }()
    private let pageNameTextField: RoundedTextField = {
        let pageNameTextField = RoundedTextField()
        pageNameTextField.accessibilityIdentifier = "newPageNameTextField"
        pageNameTextField.attributedPlaceholder = NSAttributedString(
            string: "Page Name",
            attributes: [.foregroundColor: UIColor.systemGray])
        return pageNameTextField
    }()
    private let confirmButton: UIButton = {
        let confirmButton = DynamicBackgrounColordButton()
        confirmButton.accessibilityIdentifier = "newPageConfirmButton"
        confirmButton.setBackgroundColor(.systemBlue, for: .normal)
        confirmButton.setBackgroundColor(.lightGray, for: .disabled)
        confirmButton.backgroundColor = .systemBlue
        confirmButton.tintColor = .white
        confirmButton.isEnabled = false
        confirmButton.layer.cornerRadius = 5
...
