...
import UIKit

class MemoHomeTableView: UICollectionViewCell {

    private(set) var directoryContentTableView: UITableView = {
        let tableView = UITableView(frame: .zero, style: .plain)
        tableView.accessibilityIdentifier = "memoHomeTableView"
        tableView.backgroundColor = .clear
        tableView.separatorStyle = .none
        tableView.dragInteractionEnabled = true
        tableView.register(MemoTableRowView.self, forCellReuseIdentifier: MemoTableRowView.cellId)
        return tableView
    }()
...
