...
        let showFileInfomation =
            UIContextualAction(style: .normal, title: "share") { (_, _, success: @escaping (Bool) -> Void) in
                self.subject?.send(.showFileInformation(indexPath.row))
                success(true)
            }

        let removeFile =
            UIContextualAction(style: .normal, title: "remove") { (_, _, success: @escaping (Bool) -> Void) in
                self.subject?.send(.removeFile(indexPath.row))
                tableView.deleteRows(at: [indexPath], with: .fade)
                success(true)
            }

...
