...

    // MARK: - Home File Views
    private(set) var directoryCollectionView: UICollectionView = {
        let layout = UICollectionViewFlowLayout()
        layout.scrollDirection = .horizontal
        let collectionView = UICollectionView(frame: .zero, collectionViewLayout: layout)
        collectionView.accessibilityIdentifier = "memoHomeCollectionView"
        collectionView.register(
            MemoHomeDirectoryContentCell.self,
            forCellWithReuseIdentifier: MemoHomeDirectoryContentCell.reuseIdentifier)
        collectionView.isPrefetchingEnabled = false
        collectionView.showsHorizontalScrollIndicator = false
        collectionView.isScrollEnabled = false
...
